# chord

./: Cargo.toml
src/: lib.rs  main.rs
src/widgets/: message_list.rs
