[package]
name = "chord"
version = "0.1.0"
authors = ["pandaxtc <waylonpeng@gmail.com>", "krashanoff <leo@krashanoff.com>"]
edition = "2018"

[[bin]]
name = "chord"
path = "src/main.rs"

[lib]
name = "chord"
path = "src/lib.rs"

[dependencies]
ansi_term = "0.12.1"
dotenv = "^0.15.0"
serenity = "0.9.0-rc.1"
take_mut = "^0.2"
tokio = "0.2.22"

[dependencies.iced]
features = ["debug"]